--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,19 @@
 <ion-app>
-  <ion-router-outlet></ion-router-outlet>
+  <ion-content [fullscreen]="true">
+    <ion-grid class="p-0">
+      <ion-row>
+        <ion-col size="2" sizeMd="3" sizeLg="2"  class="p-0">
+          <app-sidebar></app-sidebar>
+        </ion-col>
+        <ion-col size="10" sizeMd="9" sizeLg="10" class="p-0">
+          <div>
+            <p class="bg-red-300">
+              <ion-router-outlet></ion-router-outlet>
+            </p>
+          </div>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </ion-content>
 </ion-app>
+
