--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -20,6 +20,35 @@
   background: rgb(17 24 39 / var(--tw-bg-opacity)) !important;
 }
 
+::ng-deep .custom_blue_shine {
+  position: relative;
+  height: 100%;
+  background-color: #0978f8; /* Base blue color */
+  overflow: hidden;
+}
+
+::ng-deep .custom_blue_shine::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: -100%;
+  width: 200%; /* Double the width to cover the entire area */
+  height: 100%;
+  background: linear-gradient(90deg, transparent, rgba(255, 255, 255, 0.5), transparent);
+  animation: shine 2s linear infinite;
+}
+
+@keyframes shine {
+  0% {
+    left: -100%;
+  }
+  100% {
+    left: 100%;
+  }
+}
+
+
+
 
 //Custom Scroll
 /* Add this to your global styles or a component-specific stylesheet */
