--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -117,6 +117,16 @@
 
     <div
     routerLinkActive="active__color"
+    [routerLink]="['/fto-report']"
+      class="mt-3 flex items-center rounded-md px-4 py-2 duration-300 cursor-pointer hover:bg-blue-600 text-white"
+    >
+      <ion-icon name="flask-outline"></ion-icon>
+      <span class="text-[15px] ml-4 text-gray-200 font-bold">FTO Report</span>
+
+    </div>
+
+    <div
+    routerLinkActive="active__color"
       class="mt-3 flex items-center rounded-md px-4 py-2 duration-300 cursor-pointer hover:bg-blue-600 text-white"
     >
       <ion-icon name="flask-outline"></ion-icon>
