Dashboard, Reports, Evidence

--- a/src/app/dashboard/dashboard.page.html
+++ b/src/app/dashboard/dashboard.page.html
@@ -40,4 +40,7 @@
   </ion-toolbar>
 </ion-header>
 
-<div>Contents</div>
+<div class="h-screen custom_grey" >
+  <div echarts [options]="chartOption" class="demo-chart"></div>
+
+</div>
