--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -79,6 +79,7 @@
 
     <div
     routerLinkActive="active__color"
+    [routerLink]="['/evidence']"
       class="mt-3 flex items-center rounded-md px-4 py-2 duration-300 cursor-pointer hover:bg-blue-600 text-white"
     >
       <ion-icon name="flask-outline"></ion-icon>
