--- a/src/app/reports/reports.page.html
+++ b/src/app/reports/reports.page.html
@@ -2,7 +2,7 @@
   <ion-toolbar class="header">
     <div class="w-full flex">
       <div class="lg:w-9/12 md:w-8/12 flex justify-start items-center">
-        <p class="font-lato font-bold text-white ml-2">Reports</p>
+        <p class="font-lato font-bold text-white ml-2">FTO Reports</p>
       </div>
       <div class="lg:w-3/12 md:4/12">
         <div class="mr-3">
@@ -30,7 +30,7 @@
               type="search"
               id="default__search"
               class="block h-2 w-full p-4 ps-10 text-white text-sm border rounded-2xl bg-gray-900 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-900 focus:outline-none"
-              placeholder="Search Reports"
+              placeholder="Search FTO Reports"
               required
             />
           </div>
@@ -39,5 +39,317 @@
     </div>
   </ion-toolbar>
 </ion-header>
+<div>
 
-<div>Content</div>
+
+<ion-grid class="m-0 p-0">
+  <ion-row >
+    <ion-col size="9" class="bg-gray-900 h-svh">
+      <div class="flex flex-col bg-gray-800 py-1 pl-2">
+        <ion-text class="font-lato text-slate-50 text-sm">FTO Report #9321</ion-text>
+        <ion-text class="font-lato text-slate-50 text-sm">Created For Vic Hanna - Created By Lia Nod - a day ago</ion-text>
+      </div>
+      <div class="flex flex-col bg-gray-800 py-2 pl-2 mt-2">
+        <ion-text class="font-lato text-slate-50 text-sm">Shift 1 Session 1</ion-text>
+      </div>
+      <div class="flex h-[70vh] custom__grey px-1 py-1">
+        <div class="w-1 custom_blue_shine"></div>
+        <div class="w-full font-lato text-slate-50 pl-1 text-sm">
+          Lorem Ipsum is simply dummy text of the printing and typesetting industry. <br>
+           Ipsum has been the industry's standard dummy text ever since the 1500s,  <br>
+           when an unknown printer took a galley of type and scrambled it to make a type specimen book. <br>
+           It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. <br>
+            It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages,  <br>
+            and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+        </div>
+      </div>
+    </ion-col>
+    <ion-col size="3" class="bg-gray-800 h-svh">
+      <div class="custom-scrollbar overflow-auto h-[90vh]">
+
+
+      <div class="mt-2">
+        <div class="flex justify-between items-center bg-gray-700 py-2 rounded-sm px-2">
+          <ion-text class="text-slate-50 font-lato text sm">Pursuits</ion-text>
+          <div class="">
+            <ion-text class="custom_blue rounded-sm p-1 font-lato text-sm text-slate-50">10</ion-text>
+          </div>
+        </div>
+        <div>
+          <ion-progress-bar  [value]="0.1"></ion-progress-bar>
+        </div>
+      </div>
+
+      <div class="mt-2">
+        <div class="flex justify-between items-center bg-gray-700 py-2 rounded-sm px-2">
+          <ion-text class="text-slate-50 font-lato text sm">Pursuits</ion-text>
+          <div class="">
+            <ion-text class="custom_blue rounded-sm p-1 font-lato text-sm text-slate-50">20</ion-text>
+          </div>
+        </div>
+        <div>
+          <ion-progress-bar  [value]="0.2"></ion-progress-bar>
+        </div>
+      </div>
+
+      <div class="mt-2">
+        <div class="flex justify-between items-center bg-gray-700 py-2 rounded-sm px-2">
+          <ion-text class="text-slate-50 font-lato text sm">Pursuits</ion-text>
+          <div class="">
+            <ion-text class="custom_blue rounded-sm p-1 font-lato text-sm text-slate-50">30</ion-text>
+          </div>
+        </div>
+        <div>
+          <ion-progress-bar  [value]="0.3"></ion-progress-bar>
+        </div>
+      </div>
+
+      <div class="mt-2">
+        <div class="flex justify-between items-center bg-gray-700 py-2 rounded-sm px-2">
+          <ion-text class="text-slate-50 font-lato text sm">Pursuits</ion-text>
+          <div class="">
+            <ion-text class="custom_blue rounded-sm p-1 font-lato text-sm text-slate-50">90</ion-text>
+          </div>
+        </div>
+        <div>
+          <ion-progress-bar  [value]="0.9"></ion-progress-bar>
+        </div>
+      </div>
+
+      <div class="mt-2">
+        <div class="flex justify-between items-center bg-gray-700 py-2 rounded-sm px-2">
+          <ion-text class="text-slate-50 font-lato text sm">Pursuits</ion-text>
+          <div class="">
+            <ion-text class="custom_blue rounded-sm p-1 font-lato text-sm text-slate-50">80</ion-text>
+          </div>
+        </div>
+        <div>
+          <ion-progress-bar  [value]="0.8"></ion-progress-bar>
+        </div>
+      </div>
+
+      <div class="mt-2">
+        <div class="flex justify-between items-center bg-gray-700 py-2 rounded-sm px-2">
+          <ion-text class="text-slate-50 font-lato text sm">Pursuits</ion-text>
+          <div class="">
+            <ion-text class="custom_blue rounded-sm p-1 font-lato text-sm text-slate-50">20</ion-text>
+          </div>
+        </div>
+        <div>
+          <ion-progress-bar  [value]="0.2"></ion-progress-bar>
+        </div>
+      </div>
+
+      <div class="mt-2">
+        <div class="flex justify-between items-center bg-gray-700 py-2 rounded-sm px-2">
+          <ion-text class="text-slate-50 font-lato text sm">Pursuits</ion-text>
+          <div class="">
+            <ion-text class="custom_blue rounded-sm p-1 font-lato text-sm text-slate-50">50</ion-text>
+          </div>
+        </div>
+        <div>
+          <ion-progress-bar  [value]="0.5"></ion-progress-bar>
+        </div>
+      </div>
+
+      <div class="mt-2">
+        <div class="flex justify-between items-center bg-gray-700 py-2 rounded-sm px-2">
+          <ion-text class="text-slate-50 font-lato text sm">Pursuits</ion-text>
+          <div class="">
+            <ion-text class="custom_blue rounded-sm p-1 font-lato text-sm text-slate-50">80</ion-text>
+          </div>
+        </div>
+        <div>
+          <ion-progress-bar  [value]="0.8"></ion-progress-bar>
+        </div>
+      </div>
+
+      <div class="mt-2">
+        <div class="flex justify-between items-center bg-gray-700 py-2 rounded-sm px-2">
+          <ion-text class="text-slate-50 font-lato text sm">Pursuits</ion-text>
+          <div class="">
+            <ion-text class="custom_blue rounded-sm p-1 font-lato text-sm text-slate-50">10</ion-text>
+          </div>
+        </div>
+        <div>
+          <ion-progress-bar  [value]="0.1"></ion-progress-bar>
+        </div>
+      </div>
+
+      <div class="mt-2">
+        <div class="flex justify-between items-center bg-gray-700 py-2 rounded-sm px-2">
+          <ion-text class="text-slate-50 font-lato text sm">Pursuits</ion-text>
+          <div class="">
+            <ion-text class="custom_blue rounded-sm p-1 font-lato text-sm text-slate-50">30</ion-text>
+          </div>
+        </div>
+        <div>
+          <ion-progress-bar  [value]="0.3"></ion-progress-bar>
+        </div>
+      </div>
+
+      <div class="mt-2">
+        <div class="flex justify-between items-center bg-gray-700 py-2 rounded-sm px-2">
+          <ion-text class="text-slate-50 font-lato text sm">Pursuits</ion-text>
+          <div class="">
+            <ion-text class="custom_blue rounded-sm p-1 font-lato text-sm text-slate-50">50</ion-text>
+          </div>
+        </div>
+        <div>
+          <ion-progress-bar  [value]="0.5"></ion-progress-bar>
+        </div>
+      </div>
+
+      <div class="mt-2">
+        <div class="flex justify-between items-center bg-gray-700 py-2 rounded-sm px-2">
+          <ion-text class="text-slate-50 font-lato text sm">Pursuits</ion-text>
+          <div class="">
+            <ion-text class="custom_blue rounded-sm p-1 font-lato text-sm text-slate-50">30</ion-text>
+          </div>
+        </div>
+        <div>
+          <ion-progress-bar  [value]="0.3"></ion-progress-bar>
+        </div>
+      </div>
+
+      <div class="mt-2">
+        <div class="flex justify-between items-center bg-gray-700 py-2 rounded-sm px-2">
+          <ion-text class="text-slate-50 font-lato text sm">Pursuits</ion-text>
+          <div class="">
+            <ion-text class="custom_blue rounded-sm p-1 font-lato text-sm text-slate-50">30</ion-text>
+          </div>
+        </div>
+        <div>
+          <ion-progress-bar  [value]="0.3"></ion-progress-bar>
+        </div>
+      </div>
+
+      <div class="mt-2">
+        <div class="flex justify-between items-center bg-gray-700 py-2 rounded-sm px-2">
+          <ion-text class="text-slate-50 font-lato text sm">Pursuits</ion-text>
+          <div class="">
+            <ion-text class="custom_blue rounded-sm p-1 font-lato text-sm text-slate-50">30</ion-text>
+          </div>
+        </div>
+        <div>
+          <ion-progress-bar  [value]="0.3"></ion-progress-bar>
+        </div>
+      </div>
+
+      <div class="mt-2">
+        <div class="flex justify-between items-center bg-gray-700 py-2 rounded-sm px-2">
+          <ion-text class="text-slate-50 font-lato text sm">Pursuits</ion-text>
+          <div class="">
+            <ion-text class="custom_blue rounded-sm p-1 font-lato text-sm text-slate-50">30</ion-text>
+          </div>
+        </div>
+        <div>
+          <ion-progress-bar  [value]="0.3"></ion-progress-bar>
+        </div>
+      </div>
+
+      <div class="mt-2">
+        <div class="flex justify-between items-center bg-gray-700 py-2 rounded-sm px-2">
+          <ion-text class="text-slate-50 font-lato text sm">Pursuits</ion-text>
+          <div class="">
+            <ion-text class="custom_blue rounded-sm p-1 font-lato text-sm text-slate-50">30</ion-text>
+          </div>
+        </div>
+        <div>
+          <ion-progress-bar  [value]="0.3"></ion-progress-bar>
+        </div>
+      </div>
+
+      <div class="mt-2">
+        <div class="flex justify-between items-center bg-gray-700 py-2 rounded-sm px-2">
+          <ion-text class="text-slate-50 font-lato text sm">Pursuits</ion-text>
+          <div class="">
+            <ion-text class="custom_blue rounded-sm p-1 font-lato text-sm text-slate-50">20</ion-text>
+          </div>
+        </div>
+        <div>
+          <ion-progress-bar  [value]="0.2"></ion-progress-bar>
+        </div>
+      </div>
+
+
+      <div class="mt-2">
+        <div class="flex justify-between items-center bg-gray-700 py-2 rounded-sm px-2">
+          <ion-text class="text-slate-50 font-lato text sm">Pursuits</ion-text>
+          <div class="">
+            <ion-text class="custom_blue rounded-sm p-1 font-lato text-sm text-slate-50">90</ion-text>
+          </div>
+        </div>
+        <div>
+          <ion-progress-bar  [value]="0.9"></ion-progress-bar>
+        </div>
+      </div>
+
+
+      <div class="mt-2">
+        <div class="flex justify-between items-center bg-gray-700 py-2 rounded-sm px-2">
+          <ion-text class="text-slate-50 font-lato text sm">Pursuits</ion-text>
+          <div class="">
+            <ion-text class="custom_blue rounded-sm p-1 font-lato text-sm text-slate-50">50</ion-text>
+          </div>
+        </div>
+        <div>
+          <ion-progress-bar  [value]="0.5"></ion-progress-bar>
+        </div>
+      </div>
+
+
+      <div class="mt-2">
+        <div class="flex justify-between items-center bg-gray-700 py-2 rounded-sm px-2">
+          <ion-text class="text-slate-50 font-lato text sm">Pursuits</ion-text>
+          <div class="">
+            <ion-text class="custom_blue rounded-sm p-1 font-lato text-sm text-slate-50">10</ion-text>
+          </div>
+        </div>
+        <div>
+          <ion-progress-bar  [value]="0.1"></ion-progress-bar>
+        </div>
+      </div>
+
+      <div class="mt-2">
+        <div class="flex justify-between items-center bg-gray-700 py-2 rounded-sm px-2">
+          <ion-text class="text-slate-50 font-lato text sm">Pursuits</ion-text>
+          <div class="">
+            <ion-text class="custom_blue rounded-sm p-1 font-lato text-sm text-slate-50">90</ion-text>
+          </div>
+        </div>
+        <div>
+          <ion-progress-bar  [value]="0.9"></ion-progress-bar>
+        </div>
+      </div>
+
+      <div class="mt-2">
+        <div class="flex justify-between items-center bg-gray-700 py-2 rounded-sm px-2">
+          <ion-text class="text-slate-50 font-lato text sm">Pursuits</ion-text>
+          <div class="">
+            <ion-text class="custom_blue rounded-sm p-1 font-lato text-sm text-slate-50">50</ion-text>
+          </div>
+        </div>
+        <div>
+          <ion-progress-bar  [value]="0.5"></ion-progress-bar>
+        </div>
+      </div>
+
+      <div class="mt-2">
+        <div class="flex justify-between items-center bg-gray-700 py-2 rounded-sm px-2">
+          <ion-text class="text-slate-50 font-lato text sm">Pursuits</ion-text>
+          <div class="">
+            <ion-text class="custom_blue rounded-sm p-1 font-lato text-sm text-slate-50">40</ion-text>
+          </div>
+        </div>
+        <div>
+          <ion-progress-bar  [value]="0.4"></ion-progress-bar>
+        </div>
+      </div>
+    </div>
+    </ion-col>
+  </ion-row>
+</ion-grid>
+</div>
+
+<!-- </ion-content> -->
