--- a/src/app/profiles/profiles.page.html
+++ b/src/app/profiles/profiles.page.html
@@ -2,7 +2,7 @@
     <ion-toolbar class="header">
       <div class="w-full flex">
         <div class="lg:w-9/12 md:w-8/12 flex justify-start items-center">
-          <p class="font-lato font-bold text-white ml-2">Profiles</p>
+          <p class="font-lato font-bold text-white ml-2">{{dataParam === 'evidence' ? "Evidence" : "Profile"}}</p>
         </div>
         <div class="lg:w-3/12 md:4/12">
           <div class="mr-3">
