--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -89,6 +89,7 @@
 
     <div
     routerLinkActive="active__color"
+    [routerLink]="['/charges']"
       class="mt-3 flex items-center rounded-md px-4 py-2 duration-300 cursor-pointer hover:bg-blue-600 text-white"
     >
       <ion-icon name="flask-outline"></ion-icon>
@@ -99,6 +100,7 @@
 
     <div
     routerLinkActive="active__color"
+
       class="mt-3 flex items-center rounded-md px-4 py-2 duration-300 cursor-pointer hover:bg-blue-600 text-white"
     >
       <ion-icon name="flask-outline"></ion-icon>
